feat: 1 CI jobs to pack chocolatey package, 1 CI job to push it

--- a/.github/workflows/build_release_assets.yml
+++ b/.github/workflows/build_release_assets.yml
@@ -240,6 +240,19 @@ jobs:
           # automatically do it on Windows
           pdm run bash -c "scripts/build-os-packages/build-os-packages $args"
 
+      - name: Build Chocolatey package & test it
+        # About test part, cf https://docs.chocolatey.org/en-us/create/create-packages/#testing-your-package
+        if: startsWith(matrix.os, 'windows-')
+        shell: bash
+        run: |
+          windows_zip=$(find packages -maxdepth 1 -type f -name "*.zip" | grep "windows" | head -n 1)
+          scripts/chocolatey/pack $windows_zip packages
+          cd packages
+          choco install ggshield --debug --verbose --source . --noop
+        env:
+          # otherwise grep -P in pack chocolatey/pack script fails on Windows
+          LC_ALL: en_US.utf8
+
       - name: Override base Docker image used for functional tests on Windows
         if: matrix.os == 'windows-2022'
         # This is required because GitHub Windows runner is not configured to
@@ -261,7 +274,6 @@ jobs:
           TEST_GG_VALID_TOKEN: ${{ secrets.TEST_GG_VALID_TOKEN }}
           TEST_GG_VALID_TOKEN_IGNORE_SHA: ${{ secrets.TEST_GG_VALID_TOKEN_IGNORE_SHA }}
           TEST_UNKNOWN_SECRET: ${{ secrets.TEST_UNKNOWN_SECRET }}
-
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -272,6 +284,7 @@ jobs:
             packages/ggshield-*.zip
             packages/ggshield-*.rpm
             packages/ggshield_*.deb
+            packages/ggshield.*.nupkg
 
   # Run some basic tests, the goal is to verify the ggshield binary has all the
   # libraries it needs to run
