--- a/tests/unit/cassettes/multiple_secrets.yaml
+++ b/tests/unit/cassettes/multiple_secrets.yaml
@@ -9,13 +9,13 @@ interactions:
         Connection:
           - keep-alive
         User-Agent:
-          - pygitguardian/1.20.0 (Linux;py3.11.10)
+          - pygitguardian/1.23.0 (Linux;py3.11.9)
       method: GET
       uri: https://api.gitguardian.com/v1/metadata
     response:
       body:
         string:
-          '{"version":"v2.193.0","preferences":{"marketplaces__aws_product_url":"http://aws.amazon.com/marketplace/pp/prodview-mrmulzykamba6","on_premise__restrict_signup":true,"on_premise__is_email_server_configured":true,"on_premise__default_sso_config_api_id":null,"on_premise__default_sso_config_force_sso":null,"onboarding__segmentation_v1_enabled":true,"general__maximum_payload_size":26214400,"general__mutual_tls_mode":"disabled","general__signup_enabled":true},"secret_scan_preferences":{"maximum_documents_per_scan":20,"maximum_document_size":1048576},"remediation_messages":{"pre_commit":">
+          '{"version":"v2.240.0","preferences":{"marketplaces__aws_product_url":"http://aws.amazon.com/marketplace/pp/prodview-mrmulzykamba6","on_premise__restrict_signup":true,"on_premise__is_email_server_configured":true,"on_premise__default_sso_config_api_id":null,"on_premise__default_sso_config_force_sso":null,"onboarding__segmentation_v1_enabled":true,"general__maximum_payload_size":26214400,"general__mutual_tls_mode":"disabled","general__signup_enabled":true},"secret_scan_preferences":{"maximum_documents_per_scan":20,"maximum_document_size":1048576},"remediation_messages":{"pre_commit":">
           How to remediate\n\n  Since the secret was detected before the commit was
           made:\n  1. replace the secret with its reference (e.g. environment variable).\n  2.
           commit again.\n\n> [Apply with caution] If you want to bypass ggshield (false
@@ -42,34 +42,86 @@ interactions:
           - GET, HEAD, OPTIONS
         content-length:
           - '2198'
+        content-security-policy:
+          - frame-ancestors 'none'
         content-type:
           - application/json
         cross-origin-opener-policy:
           - same-origin
         date:
-          - Tue, 22 Apr 2025 13:23:41 GMT
+          - Thu, 03 Jul 2025 14:25:38 GMT
         referrer-policy:
           - strict-origin-when-cross-origin
         server:
           - istio-envoy
         strict-transport-security:
           - max-age=31536000; includeSubDomains
-        transfer-encoding:
-          - chunked
         vary:
-          - Accept-Encoding,Cookie
+          - Cookie
         x-app-version:
-          - v2.193.0
+          - v2.240.0
         x-content-type-options:
           - nosniff
-          - nosniff
         x-envoy-upstream-service-time:
-          - '29'
+          - '27'
         x-frame-options:
           - DENY
-          - SAMEORIGIN
         x-secrets-engine-version:
-          - 2.136.1
+          - 2.141.1
+        x-xss-protection:
+          - 1; mode=block
+      status:
+        code: 200
+        message: OK
+  - request:
+      body: null
+      headers:
+        Accept:
+          - '*/*'
+        Accept-Encoding:
+          - gzip, deflate
+        Connection:
+          - keep-alive
+        User-Agent:
+          - pygitguardian/1.23.0 (Linux;py3.11.9)
+      method: GET
+      uri: https://api.gitguardian.com/v1/api_tokens/self
+    response:
+      body:
+        string: '{"id":"b6cec120-cde4-41b8-a59e-1ca2eedb3c13","name":"scan","type":"personal_access_token","scopes":["scan","scan:create-incidents"],"member_id":304824,"workspace_id":295980,"created_at":"2025-07-03T13:10:37.610471Z","last_used_at":"2025-07-03T14:25:00Z","expire_at":null,"revoked_at":null,"status":"active","creator_id":304824}'
+      headers:
+        access-control-expose-headers:
+          - X-App-Version
+        allow:
+          - GET, DELETE, HEAD, OPTIONS
+        content-length:
+          - '327'
+        content-security-policy:
+          - frame-ancestors 'none'
+        content-type:
+          - application/json
+        cross-origin-opener-policy:
+          - same-origin
+        date:
+          - Thu, 03 Jul 2025 14:25:39 GMT
+        referrer-policy:
+          - strict-origin-when-cross-origin
+        server:
+          - istio-envoy
+        strict-transport-security:
+          - max-age=31536000; includeSubDomains
+        vary:
+          - Cookie
+        x-app-version:
+          - v2.240.0
+        x-content-type-options:
+          - nosniff
+        x-envoy-upstream-service-time:
+          - '27'
+        x-frame-options:
+          - DENY
+        x-secrets-engine-version:
+          - 2.141.1
         x-xss-protection:
           - 1; mode=block
       status:
@@ -93,25 +145,26 @@ interactions:
         Content-Type:
           - application/json
         GGShield-Command-Id:
-          - eee544f0-aff1-472c-a75b-278795cee4f3
+          - ea70e60b-def9-464a-91b4-7a208278e077
         GGShield-Command-Path:
           - external
         GGShield-OS-Name:
           - ubuntu
         GGShield-OS-Version:
-          - '24.04'
+          - '22.04'
         GGShield-Python-Version:
-          - 3.11.10
+          - 3.11.9
         GGShield-Version:
-          - 1.38.1
+          - 1.41.0
         User-Agent:
-          - pygitguardian/1.20.0 (Linux;py3.11.10)
+          - pygitguardian/1.23.0 (Linux;py3.11.9)
         mode:
           - path
         scan_options:
           - '{"show_secrets": false, "ignored_detectors_count": 0, "ignored_matches_count":
             0, "ignored_paths_count": 0, "ignore_known_secrets": false, "with_incident_details":
-            false, "has_prereceive_remediation_message": false, "all_secrets": false}'
+            false, "has_prereceive_remediation_message": false, "all_secrets": false,
+            "source_uuid": null}'
       method: POST
       uri: https://api.gitguardian.com/v1/multiscan?all_secrets=True
     response:
@@ -119,20 +172,22 @@ interactions:
         string:
           '[{"policy_break_count":1,"policies":["Secrets detection"],"policy_breaks":[{"type":"MySQL
           Assignment","detector_name":"mysql_assignment","detector_group_name":"mysql_credentials","documentation_url":"https://docs.gitguardian.com/secrets-detection/secrets-detection-engine/detectors/specifics/mysql_assignment","policy":"Secrets
-          detection","matches":[{"type":"host","match":"google.com","index_start":114,"index_end":123,"line_start":3,"line_end":3},{"type":"port","match":"5434","index_start":151,"index_end":154,"line_start":3,"line_end":3},{"type":"username","match":"root","index_start":174,"index_end":177,"line_start":3,"line_end":3},{"type":"password","match":"m42ploz2wd","index_start":209,"index_end":218,"line_start":3,"line_end":3}],"is_excluded":false,"exclude_reason":null,"incident_url":"https://dashboard.gitguardian.com/workspace/518431/incidents/9787736","known_secret":true,"validity":"failed_to_check","diff_kind":"addition"}],"is_diff":true}]'
+          detection","matches":[{"type":"host","match":"google.com","index_start":114,"index_end":123,"line_start":3,"line_end":3},{"type":"port","match":"5434","index_start":151,"index_end":154,"line_start":3,"line_end":3},{"type":"username","match":"root","index_start":174,"index_end":177,"line_start":3,"line_end":3},{"type":"password","match":"m42ploz2wd","index_start":209,"index_end":218,"line_start":3,"line_end":3}],"is_excluded":false,"exclude_reason":null,"diff_kind":"addition","is_vaulted":false,"known_secret":false,"incident_url":"","validity":"failed_to_check"}],"is_diff":true}]'
       headers:
         access-control-expose-headers:
           - X-App-Version
         allow:
           - POST, OPTIONS
         content-length:
-          - '961'
+          - '913'
+        content-security-policy:
+          - frame-ancestors 'none'
         content-type:
           - application/json
         cross-origin-opener-policy:
           - same-origin
         date:
-          - Tue, 22 Apr 2025 13:23:45 GMT
+          - Thu, 03 Jul 2025 14:25:42 GMT
         referrer-policy:
           - strict-origin-when-cross-origin
         server:
@@ -142,17 +197,15 @@ interactions:
         vary:
           - Cookie
         x-app-version:
-          - v2.193.0
+          - v2.240.0
         x-content-type-options:
           - nosniff
-          - nosniff
         x-envoy-upstream-service-time:
-          - '3248'
+          - '3080'
         x-frame-options:
           - DENY
-          - SAMEORIGIN
         x-secrets-engine-version:
-          - 2.136.1
+          - 2.141.1
         x-xss-protection:
           - 1; mode=block
       status:
