--- a/tests/unit/cassettes/test_emoji_filename.yaml
+++ b/tests/unit/cassettes/test_emoji_filename.yaml
@@ -9,13 +9,13 @@ interactions:
         Connection:
           - keep-alive
         User-Agent:
-          - pygitguardian/1.20.0 (Darwin;py3.11.10) ggshield
+          - pygitguardian/1.23.0 (Linux;py3.11.9) ggshield
       method: GET
       uri: https://api.gitguardian.com/v1/metadata
     response:
       body:
         string:
-          '{"version":"v2.163.0","preferences":{"marketplaces__aws_product_url":"http://aws.amazon.com/marketplace/pp/prodview-mrmulzykamba6","on_premise__restrict_signup":true,"on_premise__is_email_server_configured":true,"on_premise__default_sso_config_api_id":null,"on_premise__default_sso_config_force_sso":null,"onboarding__segmentation_v1_enabled":true,"general__maximum_payload_size":26214400,"general__mutual_tls_mode":"disabled","general__signup_enabled":true},"secret_scan_preferences":{"maximum_documents_per_scan":20,"maximum_document_size":1048576},"remediation_messages":{"pre_commit":">
+          '{"version":"v2.240.0","preferences":{"marketplaces__aws_product_url":"http://aws.amazon.com/marketplace/pp/prodview-mrmulzykamba6","on_premise__restrict_signup":true,"on_premise__is_email_server_configured":true,"on_premise__default_sso_config_api_id":null,"on_premise__default_sso_config_force_sso":null,"onboarding__segmentation_v1_enabled":true,"general__maximum_payload_size":26214400,"general__mutual_tls_mode":"disabled","general__signup_enabled":true},"secret_scan_preferences":{"maximum_documents_per_scan":20,"maximum_document_size":1048576},"remediation_messages":{"pre_commit":">
           How to remediate\n\n  Since the secret was detected before the commit was
           made:\n  1. replace the secret with its reference (e.g. environment variable).\n  2.
           commit again.\n\n> [Apply with caution] If you want to bypass ggshield (false
@@ -42,34 +42,86 @@ interactions:
           - GET, HEAD, OPTIONS
         content-length:
           - '2198'
+        content-security-policy:
+          - frame-ancestors 'none'
         content-type:
           - application/json
         cross-origin-opener-policy:
           - same-origin
         date:
-          - Thu, 06 Mar 2025 16:36:14 GMT
+          - Thu, 03 Jul 2025 14:25:11 GMT
         referrer-policy:
           - strict-origin-when-cross-origin
         server:
           - istio-envoy
         strict-transport-security:
           - max-age=31536000; includeSubDomains
-        transfer-encoding:
-          - chunked
         vary:
-          - Accept-Encoding,Cookie
+          - Cookie
         x-app-version:
-          - v2.163.0
+          - v2.240.0
         x-content-type-options:
           - nosniff
-          - nosniff
         x-envoy-upstream-service-time:
-          - '36'
+          - '87'
         x-frame-options:
           - DENY
-          - SAMEORIGIN
         x-secrets-engine-version:
-          - 2.133.0
+          - 2.141.1
+        x-xss-protection:
+          - 1; mode=block
+      status:
+        code: 200
+        message: OK
+  - request:
+      body: null
+      headers:
+        Accept:
+          - '*/*'
+        Accept-Encoding:
+          - gzip, deflate
+        Connection:
+          - keep-alive
+        User-Agent:
+          - pygitguardian/1.23.0 (Linux;py3.11.9) ggshield
+      method: GET
+      uri: https://api.gitguardian.com/v1/api_tokens/self
+    response:
+      body:
+        string: '{"id":"b6cec120-cde4-41b8-a59e-1ca2eedb3c13","name":"scan","type":"personal_access_token","scopes":["scan","scan:create-incidents"],"member_id":304824,"workspace_id":295980,"created_at":"2025-07-03T13:10:37.610471Z","last_used_at":"2025-07-03T14:25:00Z","expire_at":null,"revoked_at":null,"status":"active","creator_id":304824}'
+      headers:
+        access-control-expose-headers:
+          - X-App-Version
+        allow:
+          - GET, DELETE, HEAD, OPTIONS
+        content-length:
+          - '327'
+        content-security-policy:
+          - frame-ancestors 'none'
+        content-type:
+          - application/json
+        cross-origin-opener-policy:
+          - same-origin
+        date:
+          - Thu, 03 Jul 2025 14:25:11 GMT
+        referrer-policy:
+          - strict-origin-when-cross-origin
+        server:
+          - istio-envoy
+        strict-transport-security:
+          - max-age=31536000; includeSubDomains
+        vary:
+          - Cookie
+        x-app-version:
+          - v2.240.0
+        x-content-type-options:
+          - nosniff
+        x-envoy-upstream-service-time:
+          - '41'
+        x-frame-options:
+          - DENY
+        x-secrets-engine-version:
+          - 2.141.1
         x-xss-protection:
           - 1; mode=block
       status:
@@ -92,25 +144,26 @@ interactions:
         Content-Type:
           - application/json
         GGShield-Command-Id:
-          - c59543a5-978d-4b24-99e0-8c748921a2ac
+          - c3001d10-d778-4fe4-9f90-0cb0defd0469
         GGShield-Command-Path:
           - cli secret scan pre-commit
         GGShield-OS-Name:
-          - darwin
+          - ubuntu
         GGShield-OS-Version:
-          - 'Darwin Kernel Version 24.3.0: Thu Jan  2 20:23:36 PST 2025; root:xnu-11215.81.4~3/RELEASE_ARM64_T8112'
+          - '22.04'
         GGShield-Python-Version:
-          - 3.11.10
+          - 3.11.9
         GGShield-Version:
-          - 1.37.0
+          - 1.41.0
         User-Agent:
-          - pygitguardian/1.20.0 (Darwin;py3.11.10) ggshield
+          - pygitguardian/1.23.0 (Linux;py3.11.9) ggshield
         mode:
           - pre_commit
         scan_options:
           - '{"show_secrets": false, "ignored_detectors_count": 0, "ignored_matches_count":
             0, "ignored_paths_count": 14, "ignore_known_secrets": false, "with_incident_details":
-            false, "has_prereceive_remediation_message": false, "all_secrets": false}'
+            false, "has_prereceive_remediation_message": false, "all_secrets": false,
+            "source_uuid": null}'
       method: POST
       uri: https://api.gitguardian.com/v1/multiscan?all_secrets=True
     response:
@@ -123,12 +176,14 @@ interactions:
           - POST, OPTIONS
         content-length:
           - '93'
+        content-security-policy:
+          - frame-ancestors 'none'
         content-type:
           - application/json
         cross-origin-opener-policy:
           - same-origin
         date:
-          - Thu, 06 Mar 2025 16:36:15 GMT
+          - Thu, 03 Jul 2025 14:25:12 GMT
         referrer-policy:
           - strict-origin-when-cross-origin
         server:
@@ -138,17 +193,15 @@ interactions:
         vary:
           - Cookie
         x-app-version:
-          - v2.163.0
+          - v2.240.0
         x-content-type-options:
           - nosniff
-          - nosniff
         x-envoy-upstream-service-time:
-          - '70'
+          - '53'
         x-frame-options:
           - DENY
-          - SAMEORIGIN
         x-secrets-engine-version:
-          - 2.133.0
+          - 2.141.1
         x-xss-protection:
           - 1; mode=block
       status:
