chore: replace snapshottest with syrupy and support py3.12

--- a/.gitguardian.yaml
+++ b/.gitguardian.yaml
@@ -34,3 +34,4 @@ secret:
     - .env
     - 'tests/unit/cassettes/*'
     - 'tests/unit/**/snapshots/*'
+    - 'tests/unit/verticals/secret/output/__snapshots__/*'
