--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.9",
     "Operating System :: OS Independent",
     "Topic :: Security",
@@ -123,7 +124,7 @@ tests = [
     "pytest-xdist",
     "pytest-voluptuous",
     "seed-isort-config",
-    "snapshottest",
+    "syrupy",
     "import-linter",
     "jsonschema",
     "vcrpy>=5.1.0",
